# datascience_examples

./: .gitignore  .pre-commit-config.yaml.1  LICENSE  README.md  pyproject.toml
examples/classification_flight_problem/: .gitignore
examples/classification_flight_problem/data/: flight_test_predictions_gb.csv
examples/classification_flight_problem/data/input/: flight_test.csv
examples/classification_flight_problem/data/output/: flight_test_predictions_lg.csv
examples/classification_flight_problem/docs/: Flights Project.docx
examples/classification_flight_problem/model/: gradient_boosting.pkl  logistic_regression.pkl
examples/classification_flight_problem/notebooks/: flight_problem.ipynb
src/: config.py  model_eval.py  model_pipeline.py  plots.py
test/: test_config.py
